--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "keywords": [
     "rex",
+    "react",
+    "react-dem",
     "express",
     "framework",
     "sinatra",
@@ -29,6 +31,7 @@
   "files": [
     "Readme.md",
     "index.js",
+    "client.js",
     "index.d.ts",
     "core.d.ts",
     "rex-client.d.ts",
@@ -73,6 +76,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-flow-strip-types": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
@@ -101,6 +105,8 @@
     "@types/proxy-addr": "^2.0.3",
     "@types/qs": "^6.9.15",
     "@types/range-parser": "^1.2.7",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
     "@types/scheduler": "^0.16.8",
     "@types/send": "^0.17.4",
     "@types/serve-static": "^1.15.7",
