--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "dev": "babel-node ./src/examples/index.ts",
     "build": "npm run build:esm && npm run build:cjs && npm run build:types",
     "build:esm": "tsc --project tsconfig.esm.json",
     "build:cjs": "tsc --project tsconfig.cjs.json",
@@ -15,10 +16,42 @@
   "license": "MIT",
   "description": "",
   "devDependencies": {
+    "@babel/cli": "^7.25.6",
+    "@babel/core": "^7.25.2",
+    "@babel/node": "^7.25.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.25.4",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/accepts": "^1.3.7",
+    "@types/body-parser": "^1.19.5",
+    "@types/content-disposition": "^0.5.8",
+    "@types/cookie": "^0.6.0",
+    "@types/cookie-signature": "^1.1.2",
     "@types/debug": "^4.1.12",
+    "@types/depd": "^1.1.36",
+    "@types/encodeurl": "^1.0.2",
+    "@types/escape-html": "^1.0.4",
+    "@types/finalhandler": "^1.2.3",
+    "@types/fresh": "^0.5.2",
     "@types/merge-descriptors": "^1.0.3",
+    "@types/methods": "^1.1.4",
     "@types/node": "^22.5.2",
+    "@types/on-finished": "^2.3.4",
+    "@types/parseurl": "^1.3.3",
+    "@types/proxy-addr": "^2.0.3",
+    "@types/range-parser": "^1.2.7",
+    "@types/serve-static": "^1.15.7",
+    "@types/statuses": "^2.0.5",
+    "@types/type-is": "^1.6.6",
+    "@types/utils-merge": "^0.0.31",
+    "@types/vary": "^1.1.3",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "core-js": "^3.38.1",
     "npm-run-all": "^4.1.5",
+    "regenerator-runtime": "^0.14.1",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "dependencies": {
@@ -34,15 +67,21 @@
     "escape-html": "^1.0.3",
     "finalhandler": "^1.2.1",
     "http-errors": "^2.0.0",
+    "js-beautify": "^1.15.1",
+    "lodash.escaperegexp": "^4.1.2",
     "merge-descriptors": "^2.0.0",
     "methods": "^1.1.2",
+    "object-assign": "^4.1.1",
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
     "path-to-regexp": "^0.1.8",
     "proxy-addr": "^2.0.7",
     "qs": "^6.13.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "safe-buffer": "^5.2.1",
     "send": "^0.18.0",
+    "serve-static": "^1.15.0",
     "setprototypeof": "^1.2.0",
     "statuses": "^2.0.1",
     "type-is": "^1.6.18",
