--- a/package.json
+++ b/package.json
@@ -2,21 +2,7 @@
   "name": "@idev-coder/rex",
   "version": "1.0.0",
   "types": "index.d.ts",
-  "main": "lib/index.js",
-  "umd:main": "lib/index.js",
-  "esm:main": "lib/index.js",
-  "source": "lib/index.js",
-  "exports": {
-    ".": {
-      "types": [
-        "./index.d.ts",
-        "./core.d.ts"
-      ],
-      "umd": "./lib/index.js",
-      "import": "./lib/index.js",
-      "require": "./lib/index.js"
-    }
-  },
+  "main": "index.js",
   "scripts": {
     "lint": "eslint .",
     "test": "mocha --require test/support/env --reporter spec --bail --check-leaks test/ test/acceptance/",
@@ -48,10 +34,8 @@
     "Readme.md",
     "lib/",
     "index.d.ts",
-    "core.d.ts",
-    "tsconfig.json",
-    ".babelrc",
-    ".eslintrc.yml"
+    "index.js",
+    "tsconfig.json"
   ],
   "dependencies": {
     "accepts": "~1.3.8",
