--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "lib/",
     "index.d.ts",
     "index.js",
-    "tsconfig.json"
+    "tsconfig.json",
+    "core.d.ts"
   ],
   "dependencies": {
     "accepts": "~1.3.8",
