--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "test": "mocha --require test/support/env --reporter spec --bail --check-leaks test/ test/acceptance/",
     "test-ci": "nyc --exclude examples --exclude test --exclude benchmarks --reporter=lcovonly --reporter=text npm test",
     "test-cov": "nyc --exclude examples --exclude test --exclude benchmarks --reporter=html --reporter=text npm test",
-    "test-tap": "mocha --require test/support/env --reporter tap --check-leaks test/ test/acceptance/",
-    "ex:auth": "node examples/auth/index.js",
-    "build": "webpack"
+    "test-tap": "mocha --require test/support/env --reporter tap --check-leaks test/ test/acceptance/"
   },
   "keywords": [
     "rex",
+    "html",
+    "js",
+    "jsx",
+    "tsx",
+    "ts",
+    "md",
+    "mdx",
+    "client",
+    "service",
+    "frontend",
+    "backend",
     "react",
     "react-dem",
     "express",
@@ -39,6 +48,11 @@
     "core.d.ts"
   ],
   "dependencies": {
+    "@babel/preset-flow": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@babel/register": "^7.24.6",
+    "@mdx-js/mdx": "^3.0.1",
     "accepts": "~1.3.8",
     "array-flatten": "1.1.1",
     "body-parser": "1.20.2",
@@ -55,8 +69,11 @@
     "finalhandler": "1.2.0",
     "fresh": "0.5.2",
     "http-errors": "2.0.0",
+    "js-beautify": "^1.15.1",
+    "lodash.escaperegexp": "^4.1.2",
     "merge-descriptors": "1.0.3",
     "methods": "~1.1.2",
+    "object-assign": "^4.1.1",
     "on-finished": "2.4.1",
     "parseurl": "~1.3.3",
     "path-browserify": "^1.0.1",
@@ -64,6 +81,8 @@
     "proxy-addr": "~2.0.7",
     "qs": "6.11.0",
     "range-parser": "~1.2.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "safe-buffer": "5.2.1",
     "send": "0.18.0",
     "serve-static": "1.15.0",
