--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node": "20 || >=22"
   },
   "scripts": {
-    "npm:deploy":"npm publish --access public",
+    "npm:deploy": "npm publish --access public",
     "build": "rimraf dist && rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript"
   },
   "keywords": [
@@ -42,36 +42,23 @@
     "dist/"
   ],
   "dependencies": {
-    "content-disposition": "^0.5.4",
-    "content-type": "^1.0.5",
-    "cookie": "^1.0.1",
-    "cookie-signature": "^1.2.2",
-    "finalhandler": "^1.3.1",
-    "is-promise": "^4.0.0",
+    "accepts": "^1.3.8",
+    "express": "^4.21.1",
     "merge-descriptors": "^2.0.0",
-    "methods": "^1.1.2",
-    "mime-types": "^2.1.35",
-    "once": "^1.4.0",
-    "parseurl": "^1.3.3",
-    "path-to-regexp": "^8.2.0",
-    "qs": "^6.13.0",
-    "serve-static": "^1.16.2",
-    "utils-merge": "^1.0.1",
-    "vary": "^1.1.2"
+    "router": "^1.3.8"
   },
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.1",
     "@types/accepts": "^1.3.7",
-    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
-    "@types/proxy-addr": "^2.0.3",
-    "@types/range-parser": "^1.2.7",
-    "@types/serve-static": "^1.15.7",
-    "@types/type-is": "^1.6.6",
     "rimraf": "^6.0.1",
     "rollup": "^4.25.0",
     "rollup-plugin-dts": "^6.1.1",
+    "source-map-support": "^0.5.21",
+    "ts-mocha": "^10.0.0",
+    "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
     "typescript": "^5.6.3"
   }
