--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idev-coder/rex",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "main": "dist/rex.cjs.js",
   "module": "dist/rex.esm.js",
   "types": "dist/rex.d.ts",
@@ -33,21 +33,16 @@
     "dist/"
   ],
   "dependencies": {
-    "accepts": "^1.3.8",
-    "express": "^4.21.1",
-    "merge-descriptors": "^2.0.0"
+    "express": "^5.0.1"
   },
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.1",
-    "@types/accepts": "^1.3.7",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
     "rimraf": "^6.0.1",
     "rollup": "^4.25.0",
     "rollup-plugin-dts": "^6.1.1",
-    "source-map-support": "^0.5.21",
-    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
     "typescript": "^5.6.3"
